# DynamicDataScraper

./: .replit  data_cleaner.py  main.py  models.py  pyproject.toml  replit.md  scraper.py  suffolk_members_20250629_002100.csv  suffolk_members_20250629_012455.csv
static/: script.js  style.css
templates/: database.html  index.html
