[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask-migrate>=4.1.0",
    "flask>=3.1.1",
    "selenium>=4.33.0",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
]
